--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       Your browser does not support the audio element.
       </audio>
     <i class="fas fa-snowflake"></i>
-    <script src="./script.js" />
+    <script src="./script.js" ></script>
 </body>
 </html>
